# Taifia

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: codeql.yaml  linter.yaml  linters.yaml  type-checker.yaml  ui-compile.yaml
src/: __main__.py  main.py  working_threads.py
src/algorithm/: 1) 0n 1n 2n 012 1.tur  1) 0n 1n 2n 012 2.tur  66) wcv 01c 1.tur  66) wcv 01c 2.tur  70) (ad)n (cb)2n abcd 1.tur  70) (ad)n (cb)2n abcd 2.tur  88) w wR w abc 1.tur  88) w wR w abc 2.tur  89) www abc 1.tur  89) www abc 2.tur  91) ww abc 1.tur  91) ww abc 2.tur  93) w wR w wR abc 1.tur  93) w wR w wR abc 2.tur  99) an b5n c3n abc 1.tur  99) an b5n c3n abc 2.tur
src/turing_machine/: machine.py
src/turing_machine/tapes/: multiple.py  single.py
src/ui/: form.py  form.ui
