[project]
name = "Taifia"
version = "2.0.1"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyqt6>=6.10.1",
    "pyqtgraph>=0.14.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]

[tool.pyright]
strict = ["src/turing_machine/*"]

[tool.ruff]
extend-exclude = ["src/ui/form.py"]
target-version = "py314"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Ruff formatter may conflict with this rule
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # Missing docstring is ok
    "D203",  # Conflicting with D211 which is preferred
    "D212",  # Conflicting with D213 which is preferred
    "E402",  # Sometimes module definitions not at top of the file is ok
    "FBT001", "FBT002",  # Boolean positional args are ok
    "INP001",  # Namespace packages are ok
    "RET504",  # Assignments before return can improve code readability
    "RUF001",  # Russian letters are ok
    "TRY003",  # Have no desire to create custom exception classes when there are suitable default ones, lol
]

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true
quote-style = "double"
indent-style = "space"

